welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: ')' expected but 'else' found.
  	} else {
          ^alarmClock:13: error: ')' expected but 'else' found.
  	} else{
          ^alarmClock:19: error: Unmatched closing brace '}' ignored here
} 
^alarmClock:20: error: eof expected but '}' found.
 }
 ^